--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,87 @@ h1 {
     text-align: center;
     color: #6f7bfc;
 }
+h1:hover{
+    color:rgb(126,14,201);
+    text-decoration: overline underline;
+    text-underline-offset: 5px;
+}
+
+/* Project styling */
+h3{
+    text-align: center;
+    font-style: italic;
+}
+.projects{
+    display: flex;
+    flex-wrap: wrap;
+}
+.project{
+    width: 30%;
+    margin: 10px;
+    padding: 20px 10px;
+}
+.project img{
+    width: 300px;
+    height: 300px;
+    margin: 10px;
+    border: 2px solid rgb(126, 14, 201);
+    display: block;
+    margin: auto;
+}
+
+.project img:hover{
+    border: 2px solid white;
+}
+a{
+    text-decoration: none;
+    color: rgb(126, 14, 201);
+}
+.project a:hover{
+    color: white;
+}
+.project p {
+    text-align: center;
+    margin: 15px;
+}
+
+/* About section styling */
+.about{
+    display:flex;
+    flex-wrap:wrap;
+    margin-right: 100px;
+    margin-left: 100px;
+    justify-content: center;
+}
+.about img {
+    width: 150px;
+    height: 200px;
+    border-radius: 25%;
+    border: 2px solid rgb(126,14,201);
+}
+.about p {
+    width: 50%;
+    text-align: center;
+    margin: auto;
+    line-height: 125%;
+}
+
+/*Skills section*/
+.skills {
+    margin: 40px;
+    
+}
+
+/*Contact section */
+.contact{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: center;
+}
+.contact a{
+    margin-left: 50px;
+    margin-right: 50px;
+}
+.contact a:hover {
+    text-decoration: underline;
+}
